2003/11/02 16:17 muppetman

	* Gtk2.pm: undo my silly "atleast" version checks, and so something
	more like what Exporter would do.  we don't use Exporter directly
	because we're not an exporter, and we still need to watch for -init.

	* Makefile.PL: Glib doesn't use the "atleast" check anymore, either.

2003/11/02 02:12 muppetman

	* xs/GtkButton.xs: after fixing the GenPod bug, it became apparent
	that button's doc needed to hide label on new_with_mnemonic, too.
	while i was at it, fleshed out the description of mnemonics to make
	more sense to people who've never heard of them.

2003/11/01 14:52 rwmcfa1

	* xs/Button.xs: autopod doc added

2003/10/30 22:10 rwmcfa1

	* t/30.GtkCellRenderer.t: this test seems kinda flaky, it was counting 
	that 24 callbacks happened, but often that number seems inconsistent. 
	slight modifications made so that we now check that at least one, edit, 
	render, size, and init happen. activate doesn't seem to ever occur.

2003/10/29 12:40 muppetman

	fixing a few things while tracking down bugs reported by
	Bjarne Steinsbø:

	* xs/GtkCellRenderer.xs, xs/GtkStyle.xs: all of the gtk_paint_foo()
	functions ask for GdkWindows, but actually work on GdkDrawables.
	according to http://bugzilla.gnome.org/show_bug.cgi?id=102678 ,
	the same is true for gtk_cell_renderer_render(), and has been fixed
	in gtk+ 2.3.0.  so, we use GdkDrawable instead of GdkWindow in all
	of those places.

	* examples/cellrenderer_popup.pl: if the treeview is reorderable,
	the popup and editing interaction is broken, resulting in the treeview
	thinking we're still dragging the row.  fix that by using a dummy
	GtkCellEditable.

	* xs/GtkEntry.xs: GtkEntry also implements GtkCellEditable.
	use gperl_prepend_isa() instead of custom AV-handling code.

2003/10/29 09:36 rwmcfa1

	* xs/GtkWidget.xs: improved error messages in get/set_flags. croak when
	trying to set a read only flag.

2003/10/29 02:00 muppetman

	* Gtk2.pm: add a version check to Gtk2's import
